--- a/src/index.css
+++ b/src/index.css
@@ -14,9 +14,30 @@ button:hover{
   cursor: pointer;
   background-color: #f6ff4e;
 }
+input{
+  outline: none !important;
+  border:1px transparent;
+  border-radius: 2px;
+}
 
 input:focus {
   outline: none !important;
-  border:1px solid rgb(140, 236, 111);
-  box-shadow: 0 0 3px #719ECE;
+  border:1px transparent;
+  
+}
+textarea{
+  outline: none;
+}
+textarea:focus {
+  outline: none !important;
+  border:1px transparent;
+  
+}
+
+@media only screen and (max-width: 600px){
+  html, body{
+    margin-top: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
+  }
 }
