--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body{
   background-color: #9c87ce;
-  color: white;
+  color: rgb(31, 31, 31);
 }
 
 button{
@@ -9,28 +9,35 @@ button{
   border: none;
   border-radius: .5rem;
   aspect-ratio: 16 / 9;
+  width: 200px;
 }
 button:hover{
   cursor: pointer;
-  background-color: #f6ff4e;
+  background-color: #9c87ce;
+  color: white;
 }
 input{
   outline: none !important;
   border:1px transparent;
   border-radius: 2px;
+  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
 }
 
 input:focus {
   outline: none !important;
   border:1px transparent;
+  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
   
 }
 textarea{
   outline: none;
+  border: none;
+  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
 }
 textarea:focus {
   outline: none !important;
   border:1px transparent;
+  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
   
 }
 
