--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body{
 }
 
 button{
-  
+  font-size: 16px;
   background-color: #ffffff;
   border: none;
   border-radius: .5rem;
@@ -47,4 +47,31 @@ textarea:focus {
     margin-left: 0px;
     margin-right: 0px;
   }
+}
+
+.react-logo {
+  -webkit-animation: spin 4s linear infinite;
+  -moz-animation: spin 4s linear infinite;
+  animation: spin 4s linear infinite;
+}
+@-moz-keyframes spin {
+  100% {
+    -moz-transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+
+.images{
+  display: flex;
+  flex-direction: row;
 }
