--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ button{
 button:hover{
   cursor: pointer;
   background-color: #9c87ce;
-  color: white;
+  color: black;
 }
 input{
   outline: none !important;
