--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ input{
   border:1px transparent;
   border-radius: 2px;
   box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
+  font-size: 16px;
 }
 
 input:focus {
@@ -33,6 +34,7 @@ textarea{
   outline: none;
   border: none;
   box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
+  font-size: 16px;
 }
 textarea:focus {
   outline: none !important;
