--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ button{
   border: none;
   border-radius: .5rem;
   aspect-ratio: 16 / 9;
-  width: 200px;
+  width: 100px;
+  color: black;
 }
 button:hover{
   cursor: pointer;
@@ -24,11 +25,16 @@ input{
   font-size: 16px;
 }
 
-input:focus {
+/* input:focus {
   outline: none !important;
   border:1px transparent;
   box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
   
+} */
+input:focus {
+  outline: none !important;
+  border:1px solid rgb(255, 0, 170);
+  box-shadow: 0 0 5px #719ECE;
 }
 textarea{
   outline: none;
