--- a/src/index.css
+++ b/src/index.css
@@ -1,85 +1,7 @@
 body{
-  background-color: #9c87ce;
-  color: rgb(31, 31, 31);
-}
-
-button{
-  font-size: 16px;
-  background-color: #ffffff;
-  border: none;
-  border-radius: .5rem;
-  aspect-ratio: 16 / 9;
-  width: 100px;
-  color: black;
-}
-button:hover{
-  cursor: pointer;
-  background-color: #9c87ce;
-  color: black;
-}
-input{
-  outline: none !important;
-  border:1px transparent;
-  border-radius: 2px;
-  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-  font-size: 16px;
-}
-
-/* input:focus {
-  outline: none !important;
-  border:1px transparent;
-  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-  
-} */
-input:focus {
-  outline: none !important;
-  border:1px solid rgb(255, 0, 170);
-  box-shadow: 0 0 5px #719ECE;
-}
-textarea{
-  outline: none;
-  border: none;
-  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-  font-size: 16px;
-}
-textarea:focus {
-  outline: none !important;
-  border:1px transparent;
-  box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;
-  
-}
-
-@media only screen and (max-width: 600px){
-  html, body{
-    margin-top: 30px;
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-}
-
-.react-logo {
-  -webkit-animation: spin 4s linear infinite;
-  -moz-animation: spin 4s linear infinite;
-  animation: spin 4s linear infinite;
-}
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg);
-  }
-}
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-.images{
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
+
